--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,9 @@ header#main-header {
     height: 46px;
     background: #fff;
     box-shadow: 0 1px 1px rgba(0,0,0,0.25);
+    position: relative;
+    z-index: 1;
+
 }
 
 header#main-header nav ul{
@@ -91,4 +94,24 @@ header#main-header div.side input {
     max-width: 1170px;
     margin: 0 auto;
     padding: 0 30px;
+}
+
+div.banner {
+    height: 380px;
+    width: 100%;
+    background: #3bb9e3;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-weight: bold;
+}
+
+div.bar {
+    height: 59px;
+    width: 100%;
+    background: #fff;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.25);
+
 }
