--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ header#main-header div.side input {
     width: 220px;
     border: 1px solid #E6ECF0;
     height: 34px;
-    padding: 0 30 0 12px;
+    padding: 0 30px 0 12px;
     border-radius: 16px;
     color: #667581;
     font-size: 12px;
@@ -113,5 +113,53 @@ div.bar {
     width: 100%;
     background: #fff;
     box-shadow: 0 1px 3px rgba(0,0,0,0.25);
+
+}
+
+div.bar .content {
+    display: flex;
+    justify-content: space-between ;
+    align-items: center;
+    padding-left: 270px;
+    height: 100%;
+}
+
+div.bar .content ul {
+    display: flex;
+    list-style: none;
+}
+
+div.bar .content ul li{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 15px;
+    margin: 0 15px;
+}
+
+
+div.bar .content ul li span{
+    color: #667580;
+    font-size: 12px;
+    font-weight: bold;
+
+}
+
+div.bar .content ul li strong{
+    color: #667580;
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 2px;
+    
+}
+
+div.bar .content ul li.active::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: #3bb9e3;
 
 }
