--- a/styles.css
+++ b/styles.css
@@ -120,23 +120,35 @@ div.bar .content {
     display: flex;
     justify-content: space-between ;
     align-items: center;
-    padding-left: 270px;
+    padding-left: 285px;
     height: 100%;
 }
 
 div.bar .content ul {
     display: flex;
     list-style: none;
+    height: 100%;
 }
 
 div.bar .content ul li{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 0 15px;
-    margin: 0 15px;
+    position: relative;
 }
 
+div.bar .content ul li.active::after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: #3bb9e3;
+
+}
 
 div.bar .content ul li span{
     color: #667580;
@@ -153,13 +165,41 @@ div.bar .content ul li strong{
     
 }
 
-div.bar .content ul li.active::after {
-    content: "";
-    width: 100%;
-    height: 2px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: #3bb9e3;
+div.bar .content ul li.active strong {
+    color: #3bb9e3;
+}
 
+
+div.bar .content .actions button {
+    height: 34px;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90px;
+    font-weight: bold;
+    font-size: 14px;
+    color: #3bb9e3;
+    border: 1px solid #3bb9e3 ;
+    border-radius: 16px;
+    margin-right: 20px;
+}
+
+div.bar .content .actions button:hover {
+    height: 34px;
+    background: #3bb9e3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90px;
+    font-weight: bold;
+    font-size: 14px;
+    color: #fff;
+    border: 1px solid #3bb9e3 ;
+    border-radius: 16px;
+    margin-right: 20px;
+}
+
+div.bar .content .actions {
+    display: flex;
 }
